--- a/index.html
+++ b/index.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-<link rel="stylesheet" href="assets/css/bootstrap.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>Simple Quiz</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>crystalcollector</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-
-
-<div id="outer">  
-		<div id="inner"><h1>Quiz on Basic Math</h1></div>
-	</div>
-    <div id="timer"></div>
-
-<div id="outer">  
-    <div id="inner">
-	<div align="left">
-<div id="quiz"></div>
-</div>
-</div></div>
-<div align="center">
-<button id="submit">Submit Quiz</button>
-</div>
-<div align="center">
-
-<h1><div id="results"></div></h1>
-
- 
-    
-<script src="assets/js/trivia.js"></script>
+    <div id="title" style="style: align=&quot;center&quot;">
+        <p>Crystal Collector</p>
+    </div>
+    <div id="instructions">
+        <p>You will be given a random number at the start of the game.<br> There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.<br> You win the game by matching your total score to random number,
+            you lose the game if your total score goes above the random number.<br> The value of each crystal is hidden from you until you click on it.<br> Each time when the game starts, the game will change the values of each crystal.<br></p>
+    </div>
+    <div id="display" class="row">
+        <div id="numberToMatch" class="col col-12 col-sm-6 col-md-6 mb-4"></div>
+        <div id="winLoss" class="col col-12 col-sm-6 col-md-4 mb-4"></div>
+    </div>
+    <div id="game" class="row">
+        <div id="crystals" class="col col-12 col-sm-6 col-md-6 mb-4"></div>
+        <div id="scoreArea" class="col col-12 col-sm-6 col-md-6 mb-4"></div>
+    </div>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/game.js"></script>
 </body>
+
 </html>
